unpackaged/main/default/objects/ABC123__c/ABC123__c.object-meta.xml
<CustomObject>
    <label>ABC123</label>
    <nameField>
        <label>ABC123 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABC123s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>