unpackaged/main/default/objects/ABC123__c/fields/ABC123__c.field-meta.xml
<CustomField>
    <fullName>ABC123__c</fullName>
    <label>ABC123</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Dan</fullName>
            </value>
            <value>
                <fullName>Was</fullName>
            </value>
            <value>
                <fullName>Here</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>