unpackaged/main/default/objects/ABC123__c/fields/ABC123_GEOLOCATION_FIELD__c.field-meta.xml
<CustomField>
    <fullName>ABC123_GEOLOCATION_FIELD__c</fullName>
    <label>ABC123 GEOLOCATION FIELD</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>