unpackaged/main/default/objects/ABC123__c/fields/ABC123_NUMBER_FIELD__c.field-meta.xml
<CustomField>
    <fullName>ABC123_NUMBER_FIELD__c</fullName>
    <label>ABC123 NUMBER FIELD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>