unpackaged/main/default/objects/ABC123__c/fields/ABC123_PICKLIST__c.field-meta.xml
<CustomField>
    <fullName>ABC123_PICKLIST__c</fullName>
    <label>ABC123 PICKLIST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>LEMON</fullName>
            </value>
            <value>
                <fullName>TEAM</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>THE</fullName>
            </value>
            <value>
                <fullName>BEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>