unpackaged/main/default/objects/ABC123__c/fields/ABC123_USERNAME__c.field-meta.xml
<CustomField>
    <fullName>ABC123_USERNAME__c</fullName>
    <description>USERNAME DESCRIPTION HERE</description>
    <inlineHelpText>HELP TEXT HERE</inlineHelpText>
    <label>ABC123 USERNAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>