unpackaged/main/default/objects/ABC123__c/fields/FIVE__c.field-meta.xml
<CustomField>
    <fullName>FIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIVE</label>
    <type>Checkbox</type>
</CustomField>