unpackaged/main/default/objects/ABC123__c/fields/FOUR__c.field-meta.xml
<CustomField>
    <fullName>FOUR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOUR</label>
    <type>Checkbox</type>
</CustomField>