unpackaged/main/default/objects/ABC123__c/fields/ONE__c.field-meta.xml
<CustomField>
    <fullName>ONE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ONE</label>
    <type>Checkbox</type>
</CustomField>