unpackaged/main/default/objects/ABC123__c/fields/SIX__c.field-meta.xml
<CustomField>
    <fullName>SIX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIX</label>
    <type>Checkbox</type>
</CustomField>