unpackaged/main/default/objects/ABC123__c/fields/THREE__c.field-meta.xml
<CustomField>
    <fullName>THREE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>THREE</label>
    <type>Checkbox</type>
</CustomField>