unpackaged/main/default/objects/ABC123__c/fields/TWO__c.field-meta.xml
<CustomField>
    <fullName>TWO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TWO</label>
    <type>Checkbox</type>
</CustomField>